# nfl-data-models

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
docker/: Dockerfile
notebooks/exploration/: dash_app.ipynb  eda_nfl_wp_models.ipynb  epa-analysis.ipynb  ewma-analysis.ipynb  weekly_ranking_analysis.ipynb
notebooks/exploration/tests/unit/: test_calibration.py  test_cross_validation.py
notebooks/exploration/tests/validation/: test_calibration_data.py
notebooks/exploration/utils/: calibration.py  cross_validation.py  data_utils.py  models.py  tuning.py
notebooks/pipelines/: clearml-testing.ipynb  mlflow-testing.ipynb
pipeline/: __init__.py  epa_pipeline.py  generate_calibration_data.py  generate_epa_calibration_data.py  hyperparameters.yaml  import_pbp_data.py  wp_vegas_pipeline.py
pipeline/preprocessing/: __init__.py  calibration.py  data_utils.py
pipeline/serving/: epa_model.py  vega_wp_model.py
src/nfl_data_models/: wp_model.py
src/preprocessing/: data_utils.py  preprocessing.py
tests/: test_data_utils.py  test_preprocessing.py  test_wp_models.py
