[metadata]
name = nfl_data_models
version = 0.1.0
author = Jonathan Bailey
author_email = jonathan@jelbailey.com
description = A Python package for predicting NFL game outcomes using advanced data models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jonathanelbailey/nfl-data-models
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pandas
    scikit-learn
    clearml

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    sphinx

[tool:pytest]
testpaths = tests

[flake8]
max-line-length = 120
exclude =
    .git,
    __pycache__,
    build,
    dist
